# dormouse

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.md  DOR_AGENT_BROWSER.md  Home.md  ISSUE.md  PHASE_2.md  PRODUCT.md  README.md  SECURITY.md  SPEC-CONFLICTS.md  TODO.md  UsersEdgarTwiggAppDataLocalTempwsl-diag-out.txt  dor-skill.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.json
.claude/commands/: release-notes.md
.config/: tend.yaml
.github/: dependabot.yml  renovate.json
.github/workflows/: chromatic.yml  ci.yml  release.yml  security-audit.yaml  tend-ci-fix.yaml  tend-install-test.yaml  tend-mention.yaml  tend-nightly.yaml  tend-notifications.yaml  tend-review-runs.yaml  tend-review.yaml  tend-triage.yaml  tend-weekly.yaml  workflow-audit.yaml
.impeccable/: design.json
canopy/: README.md  package.json
canopy/.storybook/: preview.ts
canopy/src/: GlTerminal.stories.tsx
docs/specs/: OSC.md  TODO.md  alert.md  auto-update.md  deploy.md  dor-agent-browser.md  dor-browser.md  dor-cli-compat-cmux.md  dor-cli-compat-tmux.md  dor-cli.md  dor-iframe.md  glossary.md  iTerm2.md  layout.md  mobile-terminal-ui.md  mobile-ui.md  mouse-and-clipboard.md  ontology.md  pocket-app.md  remote-api.md  remote-security-model.md  server.md  shortcuts.md  standalone.md  terminal-escapes.md  terminal-state.md  theme.md  tiling-engine.md  transport.md  tutorial.md  vscode.md  webgl-text.md
dor/: package.json  skill.md  tsconfig.json
dor-lib-common/: package.json  tsconfig.json
dor-lib-common/src/: agent-browser.ts  cross-spawn.d.ts  index.ts  spawn.ts
dor-lib-common/test/: agent-browser.test.mjs  spawn.test.mjs
dor/src/: cli.ts  control-client.ts  dor.ts  node-runtime.d.ts  protocol.ts
dor/test/: cli-help.test.mjs  cli-output.test.mjs
functions/api/: notify-signup.ts
lib/: index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vite.pocket.config.ts
lib/.storybook/: main.ts  preview.ts  themes.ts
lib/pocket/: index.html
lib/scripts/: bundle-themes.mjs
lib/src/: App.tsx  cfg.ts  index.css  main.tsx  theme.css
scripts/: bump-version.sh  dogfood-vscode.mjs  free-dev-port.mjs  generate-dor-skill.mjs  generate-dor-version.mjs  patch-nsis-paths.pl  sign-and-deploy.sh  spec-lint.mjs  stage-dor-cli.mjs
server/: .gitignore  package.json  tsconfig.json
server-lib-common/: package.json  tsconfig.json
server-lib-common/src/: index.ts
server-lib-common/test/: acl.test.mjs  bytes.test.mjs  challenge.test.mjs  connection.test.mjs  device-key.test.mjs  ecdsa.test.mjs  index.test.mjs  pairing.test.mjs  passkey.test.mjs  (+1 more)
standalone/: package.json  tsconfig.json  vite.config.ts  vitest.config.ts
standalone/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
standalone/src-tauri/.cargo/: config.toml
standalone/src-tauri/capabilities/: default.json
standalone/src-tauri/src/: agent_browser.rs  clipboard_win.rs  lib.rs  main.rs  pe_subsystem.rs
vscode-ext/: README.md  package.json  vite.config.ts
website/: index.html  package.json  react-router.config.ts  tsconfig.json  vite.config.ts
(+529 files in other folders)
