[package]
name = "dormouse"
version = "0.10.2"
description = "Persistent multitasking terminal for mice (and hotkey wizards too)"
authors = ["DiffPlug"]
license = "FSL-1.1-MIT"
edition = "2021"

[lib]
name = "dormouse_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", default-features = false, features = ["wry"] }
tauri-plugin-updater = { version = "2", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = { version = "5", features = ["shellexecute-on-windows"] }
process-wrap = { version = "9", default-features = false, features = [
    "creation-flags",
    "job-object",
    "process-group",
    "std",
] }
url = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_System_Threading"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
